[gd_scene load_steps=2 format=3 uid="uid://dd6imh0vc83uv"]

[ext_resource type="Script" uid="uid://doh0tqbpj6itt" path="res://game/minijuegos/quiz/quizz_controller.gd" id="1_w8r81"]

[node name="Quizz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8r81")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreguntaLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -459.0
offset_top = -275.0
offset_right = 670.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 55

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 494.0
offset_right = 1615.0
offset_bottom = 718.0

[node name="BotonA" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60

[node name="BotonB" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60

[node name="BotonC" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer"]
position = Vector2(0, -11)
